k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exlytics
  labels:
    name: exlytics
    pod-security.kubernetes.io/warn: restricted
