k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exlytics
  namespace: exlytics
  labels:
    app: exlytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exlytics
  template:
    metadata:
      labels:
        app: exlytics
    spec:
      containers:
        - name: exlytics
          image: ghcr.io/corybuecker/exlytics@sha256:532f09f632e3d5fa738c812125b9f2beabdcddc213c4d4e02c5dfe5902b842d0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              memory: 384M
              cpu: 100m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
