k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exlytics
  namespace: exlytics
spec:
  selector:
    app: exlytics
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
