k8s/patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: exlytics
  namespace: exlytics
spec:
  routes:
    - kind: Rule
      match: Host(`exlytics.corybuecker.com`)
      services:
        - kind: Service
          name: exlytics
          namespace: exlytics
          passHostHeader: true
          port: http
